prac/prac/logs/hls_run_csim_8776.backup.log
INFO: [vitis-run 60-1548] Creating build summary session with primary output C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/prac\prac.hlsrun_csim_summary, at 02/24/25 14:32:40
INFO: [vitis-run 82-31] Launching vitis_hls: vitis_hls -nolog -run csim -work_dir C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/prac -config C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/hls_config.cfg -cmdlineconfig C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/prac/hls/config.cmdline
INFO: [HLS 200-10] For user 'Jaime' on host 'desktop-99hfaol' (Windows NT_amd64 version 10.0) on Mon Feb 24 14:32:43 -0500 2025
INFO: [HLS 200-10] In directory 'C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac'
INFO: [HLS 200-2005] Using work_dir C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/prac 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=bubble_sort.cpp' from C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/hls_config.cfg(10)
INFO: [HLS 200-10] Adding design file 'C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/bubble_sort.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=bubble_sort_header.hpp' from C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/hls_config.cfg(11)
INFO: [HLS 200-10] Adding design file 'C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/bubble_sort_header.hpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=bubble_sort_tb.cpp' from C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/hls_config.cfg(9)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/bubble_sort_tb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=bubble_sort' from C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/hls_config.cfg(12)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xc7z010clg225-1' from C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z010-clg225-1'
INFO: [HLS 200-1465] Applying ini 'clock=100MHz' from C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/hls_config.cfg(7)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying ini 'clock_uncertainty=1' from C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/hls_config.cfg(8)
INFO: [SYN 201-201] Setting up clock 'default' with an uncertainty of 1ns.
INFO: [HLS 200-1465] Applying ini 'package.output.format=rtl' from C:/Users/minec/OneDrive/Documents/Vitis_HLS/project1/prac/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../bubble_sort_tb.cpp in debug mode
   Compiling ../../../../bubble_sort.cpp in debug mode
csim.mk:94: recipe for target 'obj/bubble_sort.o' failed
In file included from ../../../../bubble_sort_tb.cpp:3:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/ap_int.h:10:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/ap_common.h:658:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/ap_private.h:68:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/hls_half.h:26:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/hls_fpo.h:140:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/Vitis_HLS/2024.1/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/Vitis_HLS/2024.1/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
1 warning generated.
In file included from ../../../../bubble_sort.cpp:1:
In file included from ../../../../bubble_sort_header.hpp:4:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/ap_int.h:10:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/ap_common.h:658:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/ap_private.h:68:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/hls_half.h:26:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/hls_fpo.h:140:
In file included from C:/Xilinx/Vitis_HLS/2024.1/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/Vitis_HLS/2024.1/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/Vitis_HLS/2024.1/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../bubble_sort.cpp:49:10: error: no matching function for call to 'is_sorted'
    if (!is_sorted(M[size], 0, size, errorFlag)) {
         ^~~~~~~~~
../../../../bubble_sort_header.hpp:14:6: note: candidate function not viable: no known conversion from 'data_t' (aka 'ap_uint<32>') to 'data_t *' (aka 'ap_uint<32> *') for 1st argument; take the address of the argument with &
bool is_sorted(data_t M[size], int x, int y, int &errorFlag);
     ^
1 warning and 1 error generated.
make: *** [obj/bubble_sort.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 3 seconds. Total CPU system time: 1 seconds. Total elapsed time: 7.404 seconds; peak allocated memory: 230.645 MB.
